--- a/Handsome-Squidwards/project/package.json
+++ b/Handsome-Squidwards/project/package.json
@@ -9,12 +9,14 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@clerk/clerk-expo": "^0.18.17",
+    "@types/react": "~18.2.14",
     "expo": "~49.0.7",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-native": "0.72.3",
-    "typescript": "^5.1.3",
-    "@types/react": "~18.2.14"
+    "react-native-paper": "^5.10.3",
+    "typescript": "^5.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
