--- a/Handsome-Squidwards/project/package.json
+++ b/Handsome-Squidwards/project/package.json
@@ -15,6 +15,7 @@
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-native": "0.72.3",
+    "react-native-canvas": "^0.1.39",
     "react-native-paper": "^5.10.3",
     "typescript": "^5.1.3"
   },
