--- a/Handsome-Squidwards/project/package.json
+++ b/Handsome-Squidwards/project/package.json
@@ -17,7 +17,7 @@
     "react-native": "0.72.4",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-paper": "^5.10.3",
-    "react-native-safe-area-context": "^4.7.1",
+    "react-native-safe-area-context": "4.6.3",
     "react-native-vector-icons": "^10.0.0"
   },
   "devDependencies": {
