--- a/Handsome-Squidwards/project/package.json
+++ b/Handsome-Squidwards/project/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/stack": "^6.3.17",
     "@types/react": "~18.2.14",
     "expo": "~49.0.7",
+    "expo-media-library": "^15.6.0",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-native": "0.72.3",
