--- a/Handsome-Squidwards/project/package.json
+++ b/Handsome-Squidwards/project/package.json
@@ -16,6 +16,8 @@
     "@react-navigation/native-stack": "^6.9.13",
     "@react-navigation/stack": "^6.3.17",
     "@types/react": "~18.2.14",
+    "axios": "^1.5.0",
+    "dayjs": "^1.11.9",
     "expo": "~49.0.7",
     "expo-camera": "^13.6.0",
     "expo-media-library": "^15.6.0",
