--- a/Handsome-Squidwards/back-end/.gitignore
+++ b/Handsome-Squidwards/back-end/.gitignore
@@ -2,6 +2,7 @@
 
 # dependencies
 /node_modules
+.next
 /.pnp
 .pnp.js
 
@@ -33,3 +34,5 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+
